MODRTACHCE-3: Implement Kafka listeners to handle Holdings and Item events